[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GraphReveal"
version = "0.0.1"
requires-python = ">= 3.10"
authors = [
    { name = "Michał Dobranowski", email = "mdbrnowski@gmail.com" }
]
readme = "README.md"


[tool.setuptools]
packages = ["graph_reveal_tools", "graph_reveal_tools.translator"]