[build-system]
requires = ["setuptools >= 70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GraphReveal"
version = "0.0.1"
dependencies = [
    "antlr4-python3-runtime~=4.13.1",
    "networkx~=3.3",
    "pytest~=8.2.2",
    "typer~=0.12.3",
]
requires-python = ">= 3.10"
authors = [
    { name = "Michał Dobranowski", email = "mdbrnowski@gmail.com" }
]
readme = "README.md"

[project.scripts]
graph-reveal = "graph_reveal_tools.main:app"

[tool.setuptools]
packages = ["graph_reveal_tools", "graph_reveal_tools.translator"]