[project]
name = "GraphReveal"
version = "0.0.1"
description = "Small graphs database and search system"
readme = "README.md"
authors = [
    { name = "Michał Dobranowski", email = "mdbrnowski@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "antlr4-python3-runtime>=4.13.2",
    "networkx>=3.4.2",
    "rich>=13.9.4",
    "typer>=0.15.1",
]

[project.scripts]
graphreveal = "graphreveal.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[tool.ruff]
exclude = ["generated"]